unpackaged/main/default/objects/Decision_Attribute__c/Decision_Attribute__c.object-meta.xml
<CustomObject>
    <label>Decision Attribute</label>
    <nameField>
        <displayFormat>DA-{00000}</displayFormat>
        <label>Decision Attribute</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Decision Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>