unpackaged/main/default/objects/Decision_Attribute__c/fields/Attribute_Root__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Root__c</fullName>
    <label>Attribute Root</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily Impact Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>