unpackaged/main/default/objects/Decision_Attribute__c/fields/Value_Str__c.field-meta.xml
<CustomField>
    <fullName>Value_Str__c</fullName>
    <description>Stores string values associated with decision attributes.</description>
    <label>Value_Str</label>
    <length>100</length>
    <type>Text</type>
</CustomField>